[package]
name = "winapi-wsapoll"
description = "Safe wrapper around WSAPoll"
repository = "https://github.com/psychon/winapi-wsapoll"
version = "0.1.1"
authors = ["Uli Schlachter <psychon@znc.in>"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.42"
features = ["Win32_Networking_WinSock"]
